# mode-inference

./: .gitignore  ModeInference.hs  README.md  mode-inference.cabal
ModeInference/: Constraint.hs  Inference.hs  Language.hs  PPrint.hs  Parse.hs  Run.hs  Semantic.hs  Semantic.hs-boot  Solve.hs  Syntax.hs  Syntax.hs-boot  Test.hs  Transformation.hs  Type.hs  Util.hs
ModeInference/Constraint/: Inference.hs  Reconstruct.hs  Solve.hs
Test/: 1.mtype  1.type  10.type  11.type  2.type  3.type  4.type  5.type  6.type  7.type  8.type  9.type  n-queens.type
