Name:			        mode-inference
Version:        	0.0.0
Cabal-Version:  	>= 1.9.2
License:          AllRightsReserved
Build-type:       Simple
Author:         	Alexander Bau

Library
  Exposed-Modules:    ModeInference
                    , ModeInference.Constraint
                    , ModeInference.Inference
                    , ModeInference.Language
                    , ModeInference.Parse
                    , ModeInference.PPrint
                    , ModeInference.Run
                    , ModeInference.Semantic
                    , ModeInference.Syntax
                    , ModeInference.Type
                    , ModeInference.Util

  Ghc-options:        -W -fno-warn-incomplete-patterns
  Build-Depends:      base >= 4.2 && < 5.0
                    , containers == 0.5.*
                    , syb == 0.4.*
                    , parsec == 3.1.*
                    , pretty == 1.1.*
                    , mtl == 2.1.*
